--- a/server/package.json
+++ b/server/package.json
@@ -3,21 +3,21 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "dependencies": {
     "@google-cloud/storage": "^2.1.0",
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.4",
     "debug": "^2.6.9",
     "dotenv": "^6.0.0",
     "express": "~4.16.0",
-    "http-errors": "~1.6.2",
+    "express-enrouten": "^1.3.0",
     "jsonwebtoken": "^8.3.0",
+    "lodash": "^4.17.15",
     "mongoose": "^5.2.14",
-    "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "nodemailer": "^4.6.8"
   }
