--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^6.0.0",
     "express": "~4.16.0",
     "express-enrouten": "^1.3.0",
+    "https": "^1.0.0",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.15",
     "mongoose": "^5.2.14",
